--- a/src/components/ViewList.scss
+++ b/src/components/ViewList.scss
@@ -17,6 +17,10 @@
     }
 }
 
+.mdc-list-item__text {
+    margin-right: 16px;
+}
+
 .outer-container:last-child .view-list .mdc-list-divider {
     display:none;
 }
